ingress/ingress_rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sock-shop-namespace
  name: sock-shop-namespace
  annotations:
    kubernetes.io/ingress.class: nginx # this should be uncommented if ingress used in "regular" cluster
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sock-shop.ogunleye1995.me
    http:
      path:
        backend:
          service:
            name: front-end
            port:
              number: 80
    
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-vote-front
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: votingapp.ogunleye1995.me
    http:
      path:
        backend:
          service:
            name: azure-vote-front
            port:
              number: 80


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: prometheus.ogunleye1995.me
    http:
      path:
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
